# gender_detect

./: pyproject.toml
tests/: test_gender_detect.py
